Fixed spacing in homepage

--- a/assets/css/containers.css
+++ b/assets/css/containers.css
@@ -1,5 +1,9 @@
 @import "main-style.css";
 
+.fill-page {
+    height: 100%;
+}
+
 .main-column {
     display: flex;
     flex-direction: column;
@@ -60,10 +64,9 @@
 
 .widget-list {
     display: flex;
-    align-content: flex-start;
     flex-wrap: wrap;
-    row-gap: var(--spacing-small);
-    column-gap: var(--spacing-medium);
+    row-gap: var(--spacing-medium);
+    column-gap: var(--spacing-small);
 
     margin: var(--spacing-minimum);
     justify-content: center;
